edições de texto

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@ Surjith S M / @surjithctly
                                 <div class="when_where wow fadeIn" data-wow-delay="0.4s">
                                      <h1 class="headline wow fadeInDown"><b>Aceleração UpStart</b></h1>
                                      <p class="event_where">Não perca mais tempo e se cadastre no maior programa de aceleração de Campinas</p>
+                                     <br>
+                                     <br>
 				     <a class="btn btn-default btn-xl wow zoomIn" data-wow-delay="0.3s" data-toggle="model" data-target="_blank" target="_blank" href="http://venturehub.se/#download">Cadastre-se</a>
                                     <!--<p class="event_when">Capacitação: a partir de junho, teremos um workshop mensal para apresentar as principais ferramentas de empreendedorismo</p>
                                     <p class="event_when">Competição: inscrições online a partir de 1º de Setembro</p>
@@ -210,7 +212,7 @@ Surjith S M / @surjithctly
                             <!-- Express About Yourself -->
                             <div class="about-content text-center">
                                 <h4 style="color: #007fb1;">Tração</h4>
-                                <p>Ele é focado na obtenção de tração das startups através de <b style="color: #0099cc;">processos de vendas e marketing.</b></p>
+                                <p>Ele é focado na obtenção de tração das empresas através de <b style="color: #0099cc;">processos de vendas e marketing.</b></p>
                             </div>
                         </div>
                     </div> 
@@ -226,7 +228,7 @@ Surjith S M / @surjithctly
                             <!-- Express About Yourself -->
                              <div class="about-content text-center">
                                 <h4 style="color: #007fb1;">Investimento</h4>
-                                <p>Todas as startups recebem um investimento de mais de <b style="color: #0099cc;">100 mil reais.</b></p>
+                                <p>Todas as startups participantes recebem <b style="color: #0099cc;">investimentos.</b></p>
                             </div>
                         </div>
                     </div>
@@ -249,14 +251,14 @@ Surjith S M / @surjithctly
            <p class="lead text-center"> O <b style="color: #0099cc;">UpStart</b> é um programa de aceleração de startups focado na obtenção de tração através de processos estruturados de <b style="color: #0099cc;">vendas</b> e <b style="color: #0099cc;">marketing</b>, que realiza investimentos em todas as empresas participantes do programa.
            </p> 
 
-           <p class="lead text-center"> Assim, as startups interessadas devem passar por um <b style="color: #0099cc;">processo seletivo</b>, o qual é composto por duas etapas eliminatórias: <b style="color: #0099cc;">análise de perfil</b> do empreendedor e do negócio e o <b style="color: #0099cc;">assessment center</b> (uma pré-aceleração em que os selecionados para essa etapa recebem um subsídio livre de equity para o primeiro mês de operação).
+           <p class="lead text-center"> Assim, as startups interessadas devem passar por um processo seletivo, composto por duas etapas eliminatórias: <b style="color: #0099cc;">análise de perfil</b> do empreendedor e do negócio e o <b style="color: #0099cc;">assessment center</b> (ou pré-aceleração).
            </p> 
 
-           <p class="lead text-center"> Os participantes de maior destaque no assessment center serão selecionados pela <b style="color: #0099cc;">Venture Hub</b> para o processo de aceleração. Nele, todos os participantes recebem um <b style="color: #0099cc;">investimento</b> de mais de R$100.000 em troca de 8% de participação.</p>
-            <p class="lead text-center"> Além disso, todas as startups têm a oportunidade de receber <b style="color: #0099cc;">mentorias</b> com os maiores experts do mercado, utilizar uma série de <b style="color: #0099cc;">ferramentas e serviços</b> dos nossos parceiros e se <b style="color: #0099cc;">conectar</b> com os maiores players do ecossistema a fim de escalar o seu negócio. </p>
+           <p class="lead text-center"> As empresas de maior destaque no assessment center serão selecionadas pela <b style="color: #0099cc;">Venture Hub</b> para o processo de aceleração e receberão investimento em troca de uma porcentagem de equity.</p>
+            <p class="lead text-center"> Além disso, todas as startups selecionadas terão a oportunidade de receber <b style="color: #0099cc;">mentorias</b> com experts do mercado, utilizar uma série de <b style="color: #0099cc;">ferramentas e serviços</b> dos nossos parceiros e se <b style="color: #0099cc;">conectar</b> com grandes players do ecossistema a fim de escalar o seu negócio. </p>
           
            <div class="text-center">
-                 <p class = "lead text-center" style="color: #0099cc"> Ficou com alguma dúvida? Nos envie uma mensagem que ficaremos felizes em te atender!</p>
+                 <p class = "lead text-center" style="color: #0099cc"> Ficou com alguma dúvida?</p>
                 <a class="btn btn-default btn-xl wow zoomIn" data-wow-delay="0.3s" style="background: #f1f1f1;" data-toggle="model" data-target="_blank" target="_blank" href="http://venturehub.se/#download">Entre em contato</a>
          </div>
 
@@ -286,14 +288,14 @@ Surjith S M / @surjithctly
                             <div class="benefit-item wow fadeInLeft">
                                 <div class="benefit-icon"><img src="images/icons/funding.png" style="display: block; width: 45%" ></img></div>
                                 <h6 class="benefit-title" style="color: #0099cc">Investimento</h6>
-                                <p>Todas as startups participantes do programa recebem um investimento de R$110.000 à R$220.000 em troca de 8% equity.</p>
+                                <p>Todas as startups participantes do programa recebem um investimento em troca de participação na empresa.</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="benefit-item wow fadeInRight">
                                 <div class="benefit-icon"><img src="images/icons/goal.png" style="display: block; width: 45%" ></img></div>
                                 <h6 class="benefit-title" style="color: #0099cc">Mentores</h6>
-                                <p>Você receberá suporte dos maiores experts das mais variadas áreas. Assim, eles ajudam nossas a startups com o seu desenvolvimento ao longo do programa.</p>
+                                <p>Você receberá suporte dos maiores experts do mercado. Assim, eles ajudam nossas a startups com o seu desenvolvimento ao longo do programa.</p>
                             </div>
                         </div>
 
@@ -304,7 +306,7 @@ Surjith S M / @surjithctly
                             <div class="benefit-item wow fadeInLeft">
                                 <div class="benefit-icon"> <img src="images/icons/gear.png" style="display: block; width: 45%"></img> </div>
                                 <h6 class="benefit-title" style="color: #0099cc">Ferramentas e Serviços</h6>
-                                <p> Nossos parceiros oferecem seus produtos e serviços de hosting, marketing, vendas, entre outros, gratuitamente ou a preços reduzidos.</p>
+                                <p> Nossos parceiros oferecem seus produtos e serviços gratuitamente ou a preços reduzidos.</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
