--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Surjith S M / @surjithctly
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
 
     <!-- Plugins -->
     <link href="css/plugins/animate.css" rel="stylesheet">
@@ -228,7 +228,7 @@ Surjith S M / @surjithctly
                             <!-- Express About Yourself -->
                              <div class="about-content text-center">
                                 <h4 style="color: #007fb1;">Investimento</h4>
-                                <p>Todas as startups participantes recebem <b style="color: #0099cc;">investimentos</b> em troca de participação.</p>
+                                <p>Todas as startups participantes recebem <b style="color: #0099cc;">investimentos</b> direto e indireto de recursos em troca de participação.</p>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@ Surjith S M / @surjithctly
            <p class="lead text-center"> Assim, as startups interessadas devem passar por um processo seletivo, composto por duas etapas eliminatórias: <b style="color: #0099cc;">análise de perfil</b> do empreendedor e do negócio e o <b style="color: #0099cc;">assessment center</b> (ou pré-aceleração).
            </p> 
 
-           <p class="lead text-center"> As empresas de maior destaque no assessment center serão selecionadas pela <b style="color: #0099cc;">Venture Hub</b> para o processo de aceleração e receberão investimento em troca de uma porcentagem de equity.</p>
+           <p class="lead text-center"> As empresas de maior destaque no assessment center serão selecionadas pela <b style="color: #0099cc;">Venture Hub</b> para o processo de aceleração e receberão investimentos direto e indireto de recursos em troca de uma porcentagem de equity.</p>
             <p class="lead text-center"> Além disso, todas as startups selecionadas terão a oportunidade de receber <b style="color: #0099cc;">mentorias</b> com experts do mercado, utilizar uma série de <b style="color: #0099cc;">ferramentas e serviços</b> dos nossos parceiros e se <b style="color: #0099cc;">conectar</b> com grandes players do ecossistema a fim de escalar o seu negócio. </p>
           
            <div class="text-center">
@@ -290,7 +290,7 @@ Surjith S M / @surjithctly
                             <div class="benefit-item wow fadeInLeft">
                                 <div class="benefit-icon"><img src="images/icons/funding.png" style="display: block; width: 45%" ></img></div>
                                 <h6 class="benefit-title" style="color: #0099cc">Investimento</h6>
-                                <p>Todas as startups participantes do programa recebem um investimento em troca de participação na empresa.</p>
+                                <p>Todas as startups participantes do programa recebem investimentos direto e indireto de recursos em troca de participação na empresa.</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -568,7 +568,7 @@ Surjith S M / @surjithctly
                             <!-- member name & designation -->
                             <div class="member-title">
                                 <h3>Vicenzo Lasalvia</h3>
-                                <span>Mentor Vince-Coaching</span>
+                                <span>Founder Vince-Coaching</span>
                             </div>
                             <!-- /member name & designation -->
                            
@@ -707,6 +707,7 @@ Surjith S M / @surjithctly
 
     <section class="gallery" id="gallery">
         <div class="container">
+            <br>
             <div class="section-title">
                 <h3 style="color: #007fb1;"">GALERIA</h3>
             </div>
