--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Surjith S M / @surjithctly
                     <li><a href="#funcionamento">Funcionamento</a></li>
                     <li><a href="#beneficios">Benefícios</a></li>
                     <li><a href="#mentores">Mentores</a></li>
-                    <li><a href="#schedule">Programa</a></li>
+                    <li><a href="#schedule">Cronograma</a></li>
                     <!--<li><a href="#sponsors">Parceiros</a></li> -->
                     <!--<li><a href="#gallery">Galeria</a></li>
                     <li><a href="#venue" class="hidden-sm">Local</a></li> -->
@@ -949,13 +949,13 @@ Surjith S M / @surjithctly
         <!-- Tip:  You can change location, zoom, color theme, height, image and Info text by changing data-* attribute below. -->
         <!-- Available Colors:    red, orange, yellow, green, mint, aqua, blue, purple, pink, white, grey, black, invert -->
 
-    <!--    <div class="map" id="map_canvas" data-mapLat="-22.8417299" data-mapLon="-47.0536407" data-mapzoom="2" data-color="aqua" data-height="400" data-img="images/marker.png" data-info="Rua Sergio Carnielli, 20 - Parque das Universidades, Campinas - SP, 13086-150"></div>
+      <div class="map" id="map_canvas" data-mapLat="-22.8417299" data-mapLon="-47.0536407" data-mapzoom="2" data-color="aqua" data-height="400" data-img="images/marker.png" data-info="Rua Sergio Carnielli, 20 - Parque das Universidades, Campinas - SP, 13086-150"></div>
 
   <!--  </div>
     <!-- end div.g-maps -->
 
     <!-- ::: BEGIN-VENUE ::: -->
-  <!--  <section id="directions" class="directions vertical-space-lg">
+  <section id="directions" class="directions vertical-space-lg">
 
         <div class="container">
             <div class="section-title wow fadeInUp top-space-sm">
@@ -972,7 +972,7 @@ Surjith S M / @surjithctly
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label for="routeStart">A partir de:</label>
-                                    <input type="text" id="routeStart" class="form-control" placeholder="UNICAMP">
+                                    <input type="text" id="routeStart" class="form-control" placeholder="Ex: Rua das Palmeiras, 123">
                                 </div>
                             </div>
                             <div class="col-sm-6">
@@ -1017,7 +1017,7 @@ Surjith S M / @surjithctly
 
             </div>
             <!--end-of-row-->
-    <!--    </div>
+        </div>
 
     </section> 
     <!-- ::: END MAP ::: -->
