--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Surjith S M / @surjithctly
                             <div class="benefit-item wow fadeInRight">
                                 <div class="benefit-icon"><img src="images/icons/goal.png" style="display: block; width: 45%" ></img></div>
                                 <h6 class="benefit-title" style="color: #0099cc">Mentores e Especialistas</h6>
-                                <p>Você receberá suporte de experts do mercado. Assim, eles ajudam nossas a startups com o seu desenvolvimento ao longo do programa tanto com assessorias jurídicas, de tração e de marketing, além de mentorias das mais diversas áreas.</p>
+                                <p>Você receberá suporte de experts do mercado. Assim, eles ajudam nossas startups com o seu desenvolvimento ao longo do programa tanto com assessorias jurídicas, de tração e de marketing, além de mentorias nas mais diversas áreas.</p>
                             </div>
                         </div>
                         
@@ -316,7 +316,7 @@ Surjith S M / @surjithctly
                             <div class="benefit-item wow fadeInRight">
                                 <div class="benefit-icon"><img src="images/icons/home.png" style="display: block; width: 45%" ></img></div>
                                 <h6 class="benefit-title" style="color: #0099cc">Espaço de Trabalho</h6>
-                                <p>A Venture Hub possui um espaço de coworking para suas startups em sua sede. Assim, garante-se um espaço de trabalho para todos nossos acelerados.</p>
+                                <p>A Venture Hub possui um espaço de coworking para suas startups em sua sede. Assim, por ser um programa imersivo, todos os nossos acelerados têm acesso a um espaço de trabalho ao longo do programa.</p>
                             </div>
                         </div>
 
@@ -336,7 +336,7 @@ Surjith S M / @surjithctly
                             <div class="benefit-item wow fadeInLeft">
                                 <div class="benefit-icon"> <img src="images/icons/gear.png" style="display: block; width: 45%"></img> </div>
                                 <h6 class="benefit-title" style="color: #0099cc">Ferramentas e Serviços</h6>
-                                <p> Nossos parceiros oferecem seus produtos e serviços gratuitamente ou a preços reduzidos.</p>
+                                <p> O programa por si só já oferece muitos benefícios as startups. Além disso, nossos parceiros oferecem seus produtos e serviços gratuitamente ou a preços reduzidos.</p>
                             </div>
                         </div>      
 
@@ -876,8 +876,6 @@ Surjith S M / @surjithctly
                <div data-wow-duration="100ms"><a href="http://cbitsgroup.com/" target="_blank"> <img src="images/parceiros/cbits.png" class="img-responsive center-block" alt="avatar" style="width: 50%; top: 20pt; position: relative;"></a> </div>
                 <div data-wow-duration="100ms"><a href="http://campinasstartups.com/" target="_blank"> <img src="images/parceiros/acs.png" class="img-responsive center-block" alt="avatar" style="width: 40%; position: relative; top: -10pt"></a> </div>
                 <div data-wow-duration="100ms"><a href="http://aquieolugar.com.br/" target="_blank"> <img src="images/parceiros/rge.jpg" class="img-responsive center-block" alt="avatar" style="width: 50%"></a> </div>
-                <div data-wow-duration="100ms"><a href="http://www.globaltechcampinas.com.br/site/br/home/" target="_blank"> <img src="images/parceiros/global_tech.png" class="img-responsive center-block" alt="avatar" style="width: 43%; position: relative;top: 10pt"></a> </div>
-                <div data-wow-duration="100ms"><a href="http://www.cariba.com.br/" target="_blank"> <img src="images/parceiros/cariba.jpg" class="img-responsive center-block" alt="avatar" style="width: 50%; position: relative;top:-15pt"></a> </div>
                 <div data-wow-duration="100ms"><a href="http://tracao.online/" target="_blank"> <img src="images/parceiros/tracao.jpg" class="img-responsive center-block" alt="avatar" style="width: 35%; position: relative;top: 10pt"></a> </div>
                 <div data-wow-duration="100ms"><a href="http://www.jumpers.cc/" target="_blank"> <img src="images/parceiros/jumpers.png" class="img-responsive center-block" alt="avatar" style="width: 60%; position: relative;top: -30pt"></a> </div>
                 
@@ -975,12 +973,12 @@ Surjith S M / @surjithctly
                                     <input type="text" id="routeStart" class="form-control" placeholder="Ex: Rua das Palmeiras, 123">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <!--<div class="col-sm-6">
                                 <div class="form-group">
                                     <label for="routeVia">Via<small> (Opcional)</small> </label>
                                     <input type="text" class="form-control" id="routeVia" value="">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="form-group">
                             <label class="sr-only">Transporte:</label>
